src/objects/tdc_tsw__Scheduled_Sms__c.object
<CustomObject>
    <fields>
        <fullName>tdc_tsw__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scheduled SMS</relationshipLabel>
        <relationshipName>Scheduled_SMS_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Additional_Record_Id__c</fullName>
        <label>Additional Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Attached_Files__c</fullName>
        <formula>IF(ISBLANK(tdc_tsw__Attachments_Ids__c), &quot;&quot;, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(tdc_tsw__Attachments_Ids__c,18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(tdc_tsw__Attachments_Ids__c,31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;1, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)),18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)),31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;2, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)),18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)),31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;3, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)),18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)), 31),12),&apos;&apos;))&amp;&quot; &quot;&amp; 

IF(VALUE(RIGHT(tdc_tsw__Attachments_Ids__c,(LEN(tdc_tsw__Attachments_Ids__c)-(LEN(tdc_tsw__Attachments_Ids__c)-1))))&gt;4, 
HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)+1)),18),IMAGE(&apos;/resource/tdc_tsw__Lightning_Resource/icons/doctype/&apos;+RIGHT(LEFT(RIGHT(tdc_tsw__Attachments_Ids__c,LEN(tdc_tsw__Attachments_Ids__c)-FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c,FIND(&apos;,&apos;,tdc_tsw__Attachments_Ids__c)+1)+1)+1)), 31),12),&apos;&apos;)),&quot;&quot;),&quot;&quot;),&quot;&quot;),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attached Files</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Attachments_Ids__c</fullName>
        <label>Attachments Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__CampaignMember_Status__c</fullName>
        <label>CampaignMember Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__CampaignMembersType__c</fullName>
        <label>Campaign Members Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Scheduled SMS</relationshipLabel>
        <relationshipName>Scheduled_SMS_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Scheduled SMS</relationshipLabel>
        <relationshipName>Scheduled_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scheduled SMS</relationshipLabel>
        <relationshipName>Scheduled_SMS_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Document_Id__c</fullName>
        <label>Attachment/Document Id</label>
        <length>94</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__IsEveryDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Every Day ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__IsEveryMonth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Every Month ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Last_SMS_Sent_Date__c</fullName>
        <label>Last SMS Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Scheduled SMS</relationshipLabel>
        <relationshipName>Scheduled_SMS_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Message_Text__c</fullName>
        <label>Message Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Next_SMS_Send_Date__c</fullName>
        <label>Next SMS Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scheduled SMS</relationshipLabel>
        <relationshipName>Scheduled_SMS_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Phone_Api__c</fullName>
        <label>Phone Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>tdc_tsw__Question__c</referenceTo>
        <relationshipLabel>Scheduled SMS</relationshipLabel>
        <relationshipName>Scheduled_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Related_Object_Id__c</fullName>
        <label>Related Object Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMS_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Template</label>
        <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
        <relationshipLabel>Scheduled SMS</relationshipLabel>
        <relationshipName>Scheduled_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Scheduled_JobId__c</fullName>
        <label>Scheduled JobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Scheduled_Time__c</fullName>
        <label>Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Sender_Number_Key__c</fullName>
        <label>Sender Number Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Sender_Number__c</fullName>
        <label>Sender Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Template__c</fullName>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__isParentRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Incoming SMS owner in Schedule case</description>
        <label>isParentRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__isSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSent</label>
        <type>Checkbox</type>
    </fields>
    <label>Scheduled SMS</label>
    <listViews>
        <fullName>tdc_tsw__Canceled_Scheduled_SMS</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Object_Name__c</columns>
        <columns>tdc_tsw__Message_Text__c</columns>
        <columns>tdc_tsw__Scheduled_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tdc_tsw__Scheduled_JobId__c</field>
            <operation>equals</operation>
        </filters>
        <label>Canceled Scheduled SMS</label>
    </listViews>
    <listViews>
        <fullName>tdc_tsw__Canceled_Scheduled_SMS_With_One_Job</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Scheduled_Time__c</columns>
        <columns>tdc_tsw__isSent__c</columns>
        <columns>tdc_tsw__Message_Text__c</columns>
        <columns>tdc_tsw__SMS_Template__c</columns>
        <columns>tdc_tsw__Next_SMS_Send_Date__c</columns>
        <columns>tdc_tsw__Last_SMS_Sent_Date__c</columns>
        <columns>tdc_tsw__Contact__c</columns>
        <columns>tdc_tsw__Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tdc_tsw__Scheduled_JobId__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>tdc_tsw__Next_SMS_Send_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>tdc_tsw__isSent__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Canceled Scheduled SMS With One Job</label>
    </listViews>
    <listViews>
        <fullName>tdc_tsw__Scheduled_SMS_With_One_Job</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Scheduled_Time__c</columns>
        <columns>tdc_tsw__isSent__c</columns>
        <columns>tdc_tsw__Message_Text__c</columns>
        <columns>tdc_tsw__SMS_Template__c</columns>
        <columns>tdc_tsw__Last_SMS_Sent_Date__c</columns>
        <columns>tdc_tsw__Next_SMS_Send_Date__c</columns>
        <columns>tdc_tsw__Contact__c</columns>
        <columns>tdc_tsw__Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tdc_tsw__Scheduled_JobId__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>tdc_tsw__Next_SMS_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>tdc_tsw__isSent__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Scheduled SMS With One Job</label>
    </listViews>
    <listViews>
        <fullName>tdc_tsw__Scheduled_Sms</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Scheduled_JobId__c</columns>
        <columns>tdc_tsw__Object_Name__c</columns>
        <columns>tdc_tsw__IsEveryDay__c</columns>
        <columns>tdc_tsw__IsEveryMonth__c</columns>
        <columns>tdc_tsw__Message_Text__c</columns>
        <columns>tdc_tsw__Last_SMS_Sent_Date__c</columns>
        <columns>tdc_tsw__Next_SMS_Send_Date__c</columns>
        <columns>tdc_tsw__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tdc_tsw__Next_SMS_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>tdc_tsw__Scheduled_JobId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Scheduled SMS</label>
    </listViews>
    <listViews>
        <fullName>tdc_tsw__Sent_SMS1</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Scheduled_JobId__c</columns>
        <columns>tdc_tsw__Object_Name__c</columns>
        <columns>tdc_tsw__IsEveryDay__c</columns>
        <columns>tdc_tsw__IsEveryMonth__c</columns>
        <columns>tdc_tsw__Message_Text__c</columns>
        <columns>tdc_tsw__Last_SMS_Sent_Date__c</columns>
        <columns>tdc_tsw__Next_SMS_Send_Date__c</columns>
        <columns>tdc_tsw__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tdc_tsw__Next_SMS_Send_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>tdc_tsw__Scheduled_JobId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Sent SMS</label>
    </listViews>
    <listViews>
        <fullName>tdc_tsw__Sent_SMS_With_One_Job</fullName>
        <columns>NAME</columns>
        <columns>tdc_tsw__Scheduled_Time__c</columns>
        <columns>tdc_tsw__isSent__c</columns>
        <columns>tdc_tsw__SMS_Template__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tdc_tsw__Message_Text__c</columns>
        <columns>tdc_tsw__Last_SMS_Sent_Date__c</columns>
        <columns>tdc_tsw__Next_SMS_Send_Date__c</columns>
        <columns>tdc_tsw__Contact__c</columns>
        <columns>tdc_tsw__Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tdc_tsw__isSent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>tdc_tsw__Next_SMS_Send_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Sent SMS With One Job</label>
    </listViews>
    <nameField>
        <label>Scheduled Sms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>